exports[`test should render with minimal props 1`] = `
<div className="push-top@handheld soft-half-top@lap-and-up">
<Form classes={{...}} submit={[Function]} id="add-to-cart">
<div className="display-inline-block">
<mockConstructor preFill={[Function]} changeAmount={[Function]} changeFund={[Function]} id={1} accounts={{...}} />
<h3 className="display-inline-block text-dark-tertiary push-half-bottom push-half-right">
so my total is
</h3>
<h3 className="display-inline-block text-brand push-half-bottom">
$0.00
</h3>
</div>
<div className="push-top">
<mockConstructor disabled={false} />
</div>
</Form>
</div>
`;

exports[`test should render without subfunds  1`] = `
<div className="push-top@handheld soft-half-top@lap-and-up">
<Form classes={{...}} submit={[Function]} id="add-to-cart">
<div className="display-inline-block">
<h3 className="display-inline-block text-dark-tertiary push-half-bottom push-half-right">
so my total is
</h3>
<h3 className="display-inline-block text-brand push-half-bottom">
$0.00
</h3>
</div>
<div className="push-top">
<mockConstructor disabled={false} />
</div>
</Form>
</div>
`;
